# adventofcode-2024

./: README.md  meson.build  test.py
common/include/: common.h
common/src/: file_utils.c  matrix.c  pattern_searcher.c
day1/: day1  day1.c
day2/: day2  day2.c  day2_old.c  day2_part1.c  day2_part2.c
day3/: day3.c
day4/: day4.c
